deploy/dashboard-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-route
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik-v2.5
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dashboard.test.com`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: traefik-v2
          port: 8090
